Fixed large screen product card alignments

--- a/StaticFiles/CSS/PageCSS/product-style.css
+++ b/StaticFiles/CSS/PageCSS/product-style.css
@@ -65,16 +65,21 @@
 /*#endregion*/
 
 /*#region - PRODUCT CARDS */
+
+
     .card {
         box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px;
         margin: auto;
-        min-width: 15em;
-        max-width: 20em;
+        width: 20em;
     }
 
     .card-header {
         background-color: var(--primary);
+        
     }
+        .card-header h5 {
+            margin: 5px 0;
+        }
 
     .card-img-top {
         border-radius: 0;
